tests/corpus/snapshots/bad-apple-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "limit",
  "steps": 200000,
  "d": [
    "$57",
    "$17c",
    "$10e",
    "$19a",
    "$101",
    "$d",
    "$c",
    "$191c"
  ],
  "a": [
    "$81ce",
    "$1181",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1024",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "2598a6bc5fa57350"
}
