tests/corpus/snapshots/binary-search-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 58,
  "d": [
    "$5b",
    "$9",
    "$9",
    "$9",
    "$9",
    "$12",
    "$5b",
    "$0"
  ],
  "a": [
    "$2000",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$105c",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "c27a387e4b550f67"
}
