tests/corpus/snapshots/bit-tricks-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 111,
  "d": [
    "$b6",
    "$0",
    "$5b0",
    "$6",
    "$5",
    "$0",
    "$ffff",
    "$0"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1038",
  "flags": "X:0 N:0 Z:1 V:0 C:0",
  "output": "",
  "memory": "b4da8908e1222325"
}
