tests/corpus/snapshots/bouncing-ball-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "limit",
  "steps": 200000,
  "d": [
    "$8",
    "$0",
    "$24",
    "$5a",
    "$4c",
    "$24",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1060",
  "flags": "X:0 N:0 Z:1 V:0 C:0",
  "output": "",
  "memory": "f0e233b1c010dc89"
}
