tests/corpus/snapshots/bouncing-ball-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "limit",
  "steps": 200000,
  "d": [
    "$17",
    "$2",
    "$32",
    "$ad",
    "$62",
    "$2f",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$10a0",
  "flags": "X:1 N:1 Z:0 V:0 C:1",
  "output": "",
  "memory": "6b7f0055f38ca392"
}
