tests/corpus/snapshots/bubble-sort-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 220,
  "d": [
    "$ffff",
    "$ffff",
    "$4",
    "$1",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$2002",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1030",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "35b30e9887923569"
}
